buildscript {
	repositories {
		gradlePluginPortal()
	}
	dependencies {
		classpath 'com.gradleup.shadow:shadow-gradle-plugin:9.0.0-beta4'
	}
}

plugins {
	id 'fabric-loom' version '1.9-SNAPSHOT'
	id 'com.gradleup.shadow' version '9.0.0-beta4'
	id 'maven-publish'
}

apply plugin: 'com.gradleup.shadow'
apply plugin: 'java'

version = project.mod_version
group = project.maven_group

base {
	archivesName = project.archives_base_name
}

loom {
	accessWidenerPath = file("src/main/resources/opium.accesswidener")
}

repositories {
	mavenCentral()
	maven { url 'https://maven.fabricmc.net/' }
	maven {
		name = 'Ladysnake Mods'
		url = 'https://maven.ladysnake.org/releases'
		content {
			includeGroup 'io.github.ladysnake'
			includeGroup 'org.ladysnake'
			includeGroupByRegex 'dev\\.onyxstudios.*'
		}
	}
}

dependencies {
	minecraft "com.mojang:minecraft:${project.minecraft_version}"
	mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
	modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
	include modImplementation("org.ladysnake:satin:2.0.0")
	include modImplementation('io.github.0x3c50.renderer:renderer-fabric:1.2')
	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
}

processResources {
	inputs.property "version", project.version

	filesMatching("fabric.mod.json") {
		expand "version": project.version
	}
}

tasks.withType(JavaCompile).configureEach {
	it.options.release = 21
}

java {
	withSourcesJar()

	sourceCompatibility = JavaVersion.VERSION_21
	targetCompatibility = JavaVersion.VERSION_21
}

jar {
	from("LICENSE") {
		rename { "${it}_${project.base.archivesName.get()}" }
	}
}

publishing {
	publications {
		create("mavenJava", MavenPublication) {
			artifactId = project.archives_base_name
			from components.java
		}
	}

	repositories {
		// Add repositories to publish to here.
	}
}
